--- a/GenChao.Rmd
+++ b/GenChao.Rmd
@@ -35,7 +35,7 @@ knitr::knit_hooks$set(chunk = function(x, options) {
 ```{r Options, include=FALSE}
 ### Customized options for this document
 # Add necessary packages here
-Packages <- c( "entropart", "vegan")
+Packages <- c( "entropart", "vegan", "tidyverse")
 # Install them
 InstallPackages(Packages)
 
